# mcp-control-center

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: copilot-instructions.md
ADRs/: 0001-use-fastapi.md  0002-server-driven-ui.md  0003-github-integration.md
app/: __init__.py
app/services/: mcp_client.py
backend/app/: __init__.py  cli.py  config.py  database.py  main.py
backend/app/api/: adrs.py  agents.py  documents.py  features.py  github.py  mcp.py  projects.py  proposals.py  refactors.py  reports.py  rules.py  specs.py
backend/app/models/: __init__.py  models.py
backend/app/services/: github_service.py  mcp_client.py  soc_checks.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_features.py  test_github.py  test_projects.py
frontend/static/: manifest.json  service-worker.js
frontend/static/css/: custom.css
frontend/static/js/: app.js
frontend/templates/: documents.html  features.html  index.html  layout.html  projects.html
ops/: Dockerfile  docker-compose.yml
ops/.devcontainer/: devcontainer.json
